--- a/Frameset.html
+++ b/Frameset.html
@@ -2,11 +2,15 @@
     <head>
        <title>Frameset Example</title>
     </head>
-    <frameset cols="20%,20%,20%,20%,20%">
-        <frame src="frame-image.html" name="leftFrame"/>
-        <frame src="frame-image.html" name="rightTrame"/>
-        <frame src="frame-image.html" name="leftFrame"/>
-        <frame src="frame-image.html" name="rightFrame"/>
-        <frame src="frame-image.html" name="rightFrame"/>
+    <frameset cols="30%,70%">
+        <frameset rows="50%,50%">
+            <frame src="frame-image.html" name="frame1" scrolling="auto"/>
+            <frame src="frame-image.html" name="frame2" scrolling="auto"/>
+        </frameset>
+        <frameset cols="33%,34%,33%">
+            <frame src="frame-image.html" name="frame3" scrolling="auto"/>
+            <frame src="frame-image.html" name="frame4" scrolling="auto"/>
+            <frame src="frame-image.html" name="frame5" scrolling="auto"/>
+        </frameset>
     </frameset>
 </html>
